# python-suitesparse-graphblas

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GB_VERSION.txt  LICENSE  MANIFEST.in  README.md  add_arm_to_libomp_dylib.sh  build.py  build_graphblas_cffi.py  docker_build.sh  latest_suitesparse_graphblas_version.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  suitesparse.sh  versioneer.py
.github/workflows/: docs.yml  lint.yml  test.yml  update_graphblas.yml  wheels.yml
continuous_integration/: environment.yml
docs/: index.md
docs/api/: binaryop.md  container.md  context.md  descriptor.md  global_.md  global_options.md  grb_type.md  indexbinaryop.md  indexunaryop.md  io.md  iterator.md  matrix.md  monoid.md  scalar.md  selectop.md  semiring.md  unaryop.md  vector.md
suitesparse/graphblas/: build.py  create_headers.py  source.c  suitesparse_graphblas.h  suitesparse_graphblas_no_complex.h
suitesparse_graphblas/: __init__.py  _version.py  build.py  create_headers.py  exceptions.py  iterator.py  jit.py  matrix.py  scalar.py  source.c  source_no_complex.c  suitesparse_graphblas.h  suitesparse_graphblas_arm64.h  suitesparse_graphblas_no_complex.h  utils.pxd  utils.pyx  vector.py
suitesparse_graphblas/api/: __init__.py  binaryop.py  container.py  context.py  descriptor.py  global_.py  global_options.py  grb_type.py  indexbinaryop.py  indexunaryop.py  iterator.py  matrix.py  monoid.py  scalar.py  selectop.py  semiring.py  unaryop.py  utils.py  vector.py
suitesparse_graphblas/api/examples/: __init__.py  bfs.py
suitesparse_graphblas/api/io/: binary.py  serialize.py
suitesparse_graphblas/io/: __init__.py  binary.py  serialize.py
suitesparse_graphblas/tests/: conftest.py  test_doctest.py  test_exceptions.py  test_initialize.py  test_io.py  test_jit.py  test_package.py  test_scalar.py
tests/: test_package.py
